--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 </head>
 <body>
-    <div class="top-bar">
-
+    <div class="top-bar" id="clesio34">
         <ul>
             <li><a href=""><ion-icon name="logo-facebook"></ion-icon></a></li>
             <li><a href="https://www.google.com/search?q=twi&rlz=1C1GCEU_pt-BRAO965AO965&oq=twi&aqs=chrome..69i57j46i131i199i433i465i512j0i131i433i512j0i433i512j0i512l2j69i61l2.2672j0j7&sourceid=chrome&ie=UTF-8"><ion-icon name="logo-twitter"></ion-icon></a></li>
             <li><a href=""><ion-icon name="logo-instagram"></ion-icon></a></li>
+            <li><a href=""><ion-icon name="logo-google"></ion-icon></a></li>
+            <li><a href=""><ion-icon name="logo-youtube"></ion-icon></a></li>
         </ul>
     </div>
 <!--menu-->
@@ -27,7 +28,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" id="texte" aria-current="page" href="index.html">HOME</a>
@@ -63,21 +64,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/trabalhos-comunidade-idosos-atendimento-humanizado-planejado.jpg"   class="d-block w-100" alt="...">
+            <img src="img/MicrosoftTeams-image (5).png" style="height: 43em;"   class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p class="outro">Some representative placeholder content for the first slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/trabalhos-comunidade-idosos-atendimento-humanizado-planejado.jpg"  class="d-block w-100" alt="...">
+            <img src="img/MicrosoftTeams-image (6).png" style="height: 43em;"  class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p class="outro">Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/trabalhos-comunidade-idosos-atendimento-humanizado-planejado.jpg"  class="d-block w-100" alt="...">
+            <img src="img/MicrosoftTeams-image (6).png" style="height: 43em;"  class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p class="outro">Some representative placeholder content for the third slide.</p>
