--- a/missa.html
+++ b/missa.html
@@ -12,14 +12,15 @@
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 </head>
 <body>
-    <div class="top-bar">
-
-        <ul>
-            <li><a href=""><ion-icon name="logo-facebook"></ion-icon></a></li>
-            <li><a href="https://www.google.com/search?q=twi&rlz=1C1GCEU_pt-BRAO965AO965&oq=twi&aqs=chrome..69i57j46i131i199i433i465i512j0i131i433i512j0i433i512j0i512l2j69i61l2.2672j0j7&sourceid=chrome&ie=UTF-8"><ion-icon name="logo-twitter"></ion-icon></a></li>
-            <li><a href=""><ion-icon name="logo-instagram"></ion-icon></a></li>
-        </ul>
-    </div>
+  <div class="top-bar" id="clesio34">
+    <ul>
+        <li><a href=""><ion-icon name="logo-facebook"></ion-icon></a></li>
+        <li><a href="https://www.google.com/search?q=twi&rlz=1C1GCEU_pt-BRAO965AO965&oq=twi&aqs=chrome..69i57j46i131i199i433i465i512j0i131i433i512j0i433i512j0i512l2j69i61l2.2672j0j7&sourceid=chrome&ie=UTF-8"><ion-icon name="logo-twitter"></ion-icon></a></li>
+        <li><a href=""><ion-icon name="logo-instagram"></ion-icon></a></li>
+        <li><a href=""><ion-icon name="logo-google"></ion-icon></a></li>
+        <li><a href=""><ion-icon name="logo-youtube"></ion-icon></a></li>
+    </ul>
+</div>
 <!--menu-->
     <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container-fluid">
@@ -27,7 +28,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" id="texte" aria-current="page" href="index.html">HOME</a>
