--- a/index.html
+++ b/index.html
@@ -237,12 +237,9 @@
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <!-- Content -->
             <h6 class="text-uppercase fw-bold mb-4">
-              <i class="fas fa-gem me-3"></i>Company name
+              <i class="fas fa-gem me-3"></i>Lar de Caridade
             </h6>
-            <p>
-              Here you can use rows and columns to organize your footer content. Lorem ipsum
-              dolor sit amet, consectetur adipisicing elit.
-            </p>
+            <img src="img/2022-09-01_11h05_15.pngeeeeeee.png "id="ccc" alt="">
           </div>
           <!-- Grid column -->
   
