--- a/quem.html
+++ b/quem.html
@@ -15,9 +15,9 @@
 <body>
   <div class="top-bar" id="clesio34">
     <ul>
-        <li><a href=""><ion-icon name="logo-facebook"></ion-icon></a></li>
+        <li><a id="troca" href=""><ion-icon name="logo-facebook"></ion-icon></a></li>
         <li><a href="https://www.google.com/search?q=twi&rlz=1C1GCEU_pt-BRAO965AO965&oq=twi&aqs=chrome..69i57j46i131i199i433i465i512j0i131i433i512j0i433i512j0i512l2j69i61l2.2672j0j7&sourceid=chrome&ie=UTF-8"><ion-icon name="logo-twitter"></ion-icon></a></li>
-        <li><a href=""><ion-icon name="logo-instagram"></ion-icon></a></li>
+        <li><a id="troca" href=""><ion-icon id="troca" name="logo-instagram"></ion-icon></a></li>
         <li><a href=""><ion-icon name="logo-google"></ion-icon></a></li>
         <li><a href=""><ion-icon name="logo-youtube"></ion-icon></a></li>
     </ul>
