--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
           <div class="carousel-item active">
             <img src="img/MicrosoftTeams-image (5).png" style="height: 43em;"   class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p class="outro">Some representative placeholder content for the first slide.</p>
+              <h5>Amor ao Proxímo</h5>
+              <p class="outro">Junte-se a Nós.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/MicrosoftTeams-image (6).png" style="height: 43em;"  class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p class="outro">Some representative placeholder content for the second slide.</p>
+              <h5>Praticando o Gesto do Amor <i class="fas fa-arrow-alt-from-right    "></i></h5>
+              <p class="outro">Fazer o Bem faz bem.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/MicrosoftTeams-image (6).png" style="height: 43em;"  class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p class="outro">Some representative placeholder content for the third slide.</p>
+              <h5>Praticando o Gesto do Amor </h5>
+              <p class="outro">Fazer o Bem Faz bem!</p>
             </div>
           </div>
         </div>
@@ -288,14 +288,14 @@
           <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-            <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+            <h6 class="text-uppercase fw-bold mb-4">Contacto</h6>
+            <p><i class="fas fa-home me-3"></i> Luanda, LD 10012, AO</p>
             <p>
               <i class="fas fa-envelope me-3"></i>
-              info@example.com
+              Lcaridade@gmail.com
             </p>
-            <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-            <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+            <p><i class="fas fa-phone me-3"></i> + 244 567 886 46</p>
+            <p><i class="fas fa-print me-3"></i> + 244 234 567 89</p>
           </div>
           <!-- Grid column -->
         </div>
@@ -307,7 +307,7 @@
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
       © 2021 Copyright:
-      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">LarCaridade.com</a>
     </div>
     <!-- Copyright -->
   </footer>
