--- a/quem.html
+++ b/quem.html
@@ -20,6 +20,7 @@
         <li><a id="troca" href=""><ion-icon id="troca" name="logo-instagram"></ion-icon></a></li>
         <li><a href=""><ion-icon name="logo-google"></ion-icon></a></li>
         <li><a href=""><ion-icon name="logo-youtube"></ion-icon></a></li>
+        <li><a href=""><ion-icon name="enter-outline"></ion-icon></a></li>
     </ul>
 </div>
 <!--menu-->
