--- a/contato.html
+++ b/contato.html
@@ -217,19 +217,19 @@
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              Products
+              Produtos de Doação
             </h6>
             <p>
-              <a href="#!" class="text-reset">Angulars</a>
+              <a href="#!" class="text-reset">Alimentos</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">React</a>
+              <a href="#!" class="text-reset">Roupas</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Vue</a>
+              <a href="#!" class="text-reset">Material Escolar</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Laravel</a>
+              <a href="#!" class="text-reset">Extras</a>
             </p>
           </div>
           <!-- Grid column -->
