--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href=""><ion-icon name="logo-instagram"></ion-icon></a></li>
             <li><a href=""><ion-icon name="logo-google"></ion-icon></a></li>
             <li><a href=""><ion-icon name="logo-youtube"></ion-icon></a></li>
-            <li><a href=""><ion-icon name="enter-outline"></ion-icon></a></li>
+            <li><a href="area.php"><ion-icon name="enter-outline"></ion-icon></a></li>
         </ul>
     </div>
 <!--menu-->
@@ -65,21 +65,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/MicrosoftTeams-image (5).png" style="height: 43em;"   class="d-block w-100" alt="...">
+            <img src="img/MicrosoftTeams-image (5).png" style=""   class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Amor ao Proxímo</h5>
               <p class="outro">Junte-se a Nós.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/MicrosoftTeams-image (6).png" style="height: 43em;"  class="d-block w-100" alt="...">
+            <img src="img/MicrosoftTeams-image (6).png" style=""  class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Praticando o Gesto do Amor <i class="fas fa-arrow-alt-from-right    "></i></h5>
               <p class="outro">Fazer o Bem faz bem.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/MicrosoftTeams-image (6).png" style="height: 43em;"  class="d-block w-100" alt="...">
+            <img src="img/MicrosoftTeams-image (6).png" style=""  class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Praticando o Gesto do Amor </h5>
               <p class="outro">Fazer o Bem Faz bem!</p>
@@ -331,13 +331,6 @@
 
     </script>
     <!-- JavaScript Bundle with Popper -->
-
-
-
-
-
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
