--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/MicrosoftTeams-image (5).png" style=""   class="d-block w-100" alt="...">
+            <img src="img/MicrosoftTeams-image (5).png" id="image1" style=""   class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Amor ao Proxímo</h5>
               <p class="outro">Junte-se a Nós.</p>
