--- a/index.html
+++ b/index.html
@@ -206,25 +206,14 @@
   
       <!-- Right -->
       <div>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i style="text-decoration: none;" class="fab fa-twitter"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i style="text-decoration: none;" class="fab fa-google"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i style="text-decoration: none;" class="fab fa-instagram"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-github"></i>
-        </a>
-      </div>
+       
+          <ion-icon></ion-icon></a>
+          <a href=""><ion-icon name="logo-instagram"></ion-icon></a>
+          <a href=""><ion-icon name="logo-google"></ion-icon></a>
+          <a href=""><ion-icon name="logo-youtube"></ion-icon></a>
+          <a href="area.php"><ion-icon name="enter-outline"></ion-icon></a>
+      
+   </div>
       <!-- Right -->
     </section>
     <!-- Section: Social media -->
