--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <!-- Left -->
       <div class="me-5 d-none d-lg-block">
-        <span>Get connected with us on social networks:</span>
+        <span>ESTIMULANDO O BEM ESTAR EM TERÇEIRA IDADE</span>
+        <ion-icon name="qr-code-outline"></ion-icon>
       </div>
       <!-- Left -->
   
@@ -299,6 +300,7 @@
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
       © 2021 Copyright:
       <a class="text-reset fw-bold" href="https://mdbootstrap.com/">LarCaridade.com</a>
+      <ion-icon name="qr-code-outline"></ion-icon>
     </div>
     <!-- Copyright -->
   </footer>
