--- a/missa.html
+++ b/missa.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,16 +12,8 @@
 <link rel="stylesheet" href="miss.css">
 </head>
 <body>
-<<<<<<< HEAD
-    <div class="top-bar">
 
-        <ul>
-            <li><a href=""><ion-icon name="logo-facebook"></ion-icon></a></li>
-            <li><a href="https://www.google.com/search?q=twi&rlz=1C1GCEU_pt-BRAO965AO965&oq=twi&aqs=chrome..69i57j46i131i199i433i465i512j0i131i433i512j0i433i512j0i512l2j69i61l2.2672j0j7&sourceid=chrome&ie=UTF-8"><ion-icon name="logo-twitter"></ion-icon></a></li>
-            <li><a href=""><ion-icon name="logo-instagram"></ion-icon></a></li>
-        </ul>
-    </div>
-=======
+
   <div class="top-bar" id="clesio34">
     <ul>
         <li><a href=""><ion-icon name="logo-facebook"></ion-icon></a></li>
@@ -32,7 +24,6 @@
         <li><a href=""><ion-icon name="enter-outline"></ion-icon></a></li>
     </ul>
 </div>
->>>>>>> 430604c419d258290627f725ddf2ac0a1413b9b5
 <!--menu-->
     <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container-fluid">
@@ -40,7 +31,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" id="texte" aria-current="page" href="index.html">HOME</a>
@@ -64,11 +55,8 @@
           </div>
         </div>
       </nav>
-
-      
  <!--carrosel-->
   <!--corpo do projecto-->   
-    
   <div class="texto-pages">
     <h1>Missão</h1>
 </div>
@@ -76,7 +64,7 @@
 
 <div class="missao">
   
-  <div class="img"><img src="git" alt="Trabalhos para a Comunidade de Idosos com Atendimento Humanizado e Planejado" title="Trabalhos para a Comunidade de Idosos com Atendimento Humanizado e Planejado"></div>
+  <div class="img"><img src="" alt="Trabalhos para a Comunidade de Idosos com Atendimento Humanizado e Planejado" title="Trabalhos para a Comunidade de Idosos com Atendimento Humanizado e Planejado"></div>
   
   <div class="resp"><img src="//www.larcaridadevinhedo.org.br:443/template/images/missao/trabalhos-comunidade-idosos-atendimento-humanizado-planejado-resp.jpg" alt="Trabalhos para a Comunidade de Idosos com Atendimento Humanizado e Planejado" title="Trabalhos para a Comunidade de Idosos com Atendimento Humanizado e Planejado"></div>
    
@@ -240,20 +228,6 @@
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     </script>
