--- a/contato.html
+++ b/contato.html
@@ -20,7 +20,7 @@
         <li><a href=""><ion-icon name="logo-instagram"></ion-icon></a></li>
         <li><a href=""><ion-icon name="logo-google"></ion-icon></a></li>
         <li><a href=""><ion-icon name="logo-youtube"></ion-icon></a></li>
-       <li><a href=""><ion-icon name="enter-outline"></ion-icon></a></li>
+        <li><a href="login.php"><ion-icon name="enter-outline"></ion-icon></a></li>
     </ul>
 </div>
 <!--menu-->
