--- a/portal.html
+++ b/portal.html
@@ -19,7 +19,7 @@
         <li><a href=""><ion-icon name="logo-instagram"></ion-icon></a></li>
         <li><a href=""><ion-icon name="logo-google"></ion-icon></a></li>
         <li><a href=""><ion-icon name="logo-youtube"></ion-icon></a></li>
-        <li><a href=""><ion-icon name="enter-outline"></ion-icon></a></li>
+        <li><a href="login.php"><ion-icon name="enter-outline"></ion-icon></a></li>
     </ul>
 </div>
 <!--menu-->
@@ -58,7 +58,7 @@
 
       <!--carrosel-->
      <div class="velho">
-      
+
      </div>
 
 <!--corpo do projecto-->
