--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-  
+  <link rel="stylesheet" href="bulma.min.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -181,6 +181,59 @@
 
 
 <!--falta-->
+<section class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-half">
+        <h1 class="title has-text-centered">Fale com um colaborador </h1>
+
+        <form action="enviar.php" method="POST">
+          <div class="field">
+            <label class="label">Nome</label>
+            <div class="control">
+              <input name="nome" class="input" type="text" placeholder="Seu nome">
+            </div>
+          </div>
+
+          <div class="field">
+            <label class="label">Email *</label>
+            <div class="control">
+              <input name="email" class="input" type="email" placeholder="Seu email">
+            </div>
+          </div>
+
+          <div class="field">
+            <label class="label">Assunto</label>
+            <div class="control">
+              <div class="select is-fullwidth">
+                <select name="assunto">
+                  <option>Reportar erro</option>
+                  <option>Anúncios</option>
+                  <option>Outro</option>
+                </select>
+              </div>
+            </div>
+          </div>
+
+          <div class="field">
+            <label class="label">Mensagem *</label>
+            <div class="control">
+              <textarea name="mensagem" class="textarea" placeholder="Deixe sua mensagem" maxlength="2000"></textarea>
+            </div>
+          </div>
+
+          <div class="field is-grouped">
+            <div class="control">
+              <button class="button is-link is-medium " >Enviar</button>
+            </div>
+          </div>
+        </form>
+
+      </div>
+    </div>
+  </div>
+</section>
+
 
 
 
