foi alterado o formulario

--- a/quem.html
+++ b/quem.html
@@ -12,6 +12,19 @@
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 <link rel="stylesheet" href="quem.css">
 </head>
+<style>
+  
+
+  .navbar-expand-lg {
+    background-color: rgb(190, 189, 189);
+  }
+  
+  .button.is-medium {
+    font-size: 1.25rem;
+    width: 100%;
+    color: white;
+  }
+  </style>
 <body>
   <div class="top-bar" id="clesio34"> 
     <ul>
