--- a/missa.html
+++ b/missa.html
@@ -14,6 +14,21 @@
 <body>
 
 
+
+  <style>
+  
+
+    .navbar-expand-lg {
+      background-color: rgb(190, 189, 189);
+    }
+    
+    .button.is-medium {
+      font-size: 1.25rem;
+      width: 100%;
+      color: white;
+    }
+    </style>
+
   <div class="top-bar" id="clesio34">
     <ul>
         <li><a href=""><ion-icon name="logo-facebook"></ion-icon></a></li>
