--- a/portal.html
+++ b/portal.html
@@ -11,6 +11,20 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 </head>
+
+<style>
+  
+
+  .navbar-expand-lg {
+    background-color: rgb(190, 189, 189);
+  }
+  
+  .button.is-medium {
+    font-size: 1.25rem;
+    width: 100%;
+    color: white;
+  }
+  </style>
 <body>
   <div class="top-bar" id="clesio34">
     <ul>
@@ -22,6 +36,9 @@
         <li><a href="login.php"><ion-icon name="enter-outline"></ion-icon></a></li>
     </ul>
 </div>
+
+
+
 <!--menu-->
     <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container-fluid">
