--- a/horario.html
+++ b/horario.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="horario.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
@@ -107,29 +108,33 @@
   <h1>HORÁRIO</h1>
 </div>
 
-<div class="horario">
-  <h1> Lar da Caridade de Vinhedo</h1>
+<div id="horario">
+  <h3> Lar da Caridade de Vinhedo</h3>
   <p>A casa funciona 24 hs por dia.</p>
    
-  <h1>Visitas a Instituição</h1>
+  <h3>Visitas a Instituição</h3>
   <p>14:30 hs as 16:30hs - diariamente.
    Visitas em grupo ou para conhecer a Instituição, entrar em contato antecipadamente pelo telefone: 3876-1361.</p>
    
    <h1>Administração</h1>
   <p>8:00 hs as 17:00 hs - de segunda a sexta.
    8:00 hs as 12:00 hs - sábados.</p>
+
+  </div>
    
-   <h1> Orientação sobre Vagas</h1>
+  <div id="horarios">
+   <h3> Orientação sobre Vagas</h3>
   <p>segundas, quartas e sextas das 08:00 as 17:00 hs
    terças e quintas das 8:00 as 14:00hs</p>
    
-   <h1> Bazar</h1>
+   <h3> Bazar</h3>
   <p> Duas vezes por mês todas as 2ª e 4ª quintas feiras/mês dás 8:00 as 16:00hs.
    Local: Rua: João Corazzari, 391 - Centro - Vinhedo </p>
 
+  </div>
    
 
-  </div>
+  
 
 
 
