--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <h5 class="card-title">ASSOCIADO CONTRIBUINTE</h5>
     <p class="card-text">Entre em contato conosco, 19- 38761361 ou pelo e-mail</p>
     <p class="card-text">lardacaridade.vinhedo@gmail.com.</p>
-    <a href="mailto:@gmail.com" class="btn btn-dark">enviar email</a>
+    <a href="mailto:cs0571275@gmail.com" class="btn btn-dark">enviar email</a>
   </div>
 </div>
 </div>
