--- a/missa.html
+++ b/missa.html
@@ -64,7 +64,7 @@
 
 <div class="missao">
   
-  <div class="img"><img src="" alt="Trabalhos para a Comunidade de Idosos com Atendimento Humanizado e Planejado" title="Trabalhos para a Comunidade de Idosos com Atendimento Humanizado e Planejado"></div>
+  <div class="img"><img src="imgem/Rosa.png" alt="Trabalhos para a Comunidade de Idosos com Atendimento Humanizado e Planejado" title="Trabalhos para a Comunidade de Idosos com Atendimento Humanizado e Planejado"></div>
   
   <div class="resp"><img src="//www.larcaridadevinhedo.org.br:443/template/images/missao/trabalhos-comunidade-idosos-atendimento-humanizado-planejado-resp.jpg" alt="Trabalhos para a Comunidade de Idosos com Atendimento Humanizado e Planejado" title="Trabalhos para a Comunidade de Idosos com Atendimento Humanizado e Planejado"></div>
    
@@ -91,7 +91,9 @@
             <li>Habilidades e Atitudes.</li>
         </ul>
     </div> <!-- item -->
-    
+      <div class="img2">
+        <img src="imgem/Rosa1.png" alt="">
+      </div>
     <div class="item">
         <h2>VISÃO E COMUNIDADE</h2>
         <p>Ser reconhecido na comunidade pelos bons serviços prestados e como referência de atendimento humanizado e de qualidade.</p>
