--- a/horario.html
+++ b/horario.html
@@ -67,7 +67,7 @@
       </div>
       <hr>
 
-      <div class="container overflow-hidden">
+      <div class="container overflow-hidden bgrs">
         <div class="row gy-5">
           <div class="col-6">
             <div class="p-3 border bg-light">
