--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
 
   .navbar-expand-lg {
-    background-color: rgb(190, 189, 189);
+    background-color: rgb(255, 255, 255);
   }
   
   .button.is-medium {
@@ -42,7 +42,7 @@
 <!--menu-->
     <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img class="logo" id="letra" src="img/2022-09-01_11h05_15.pngeeeeeee.png" alt=""></a>
+          <a class="navbar-brand" href="#"><img class="logo" id="letra" src="img/images-(4).png" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -268,12 +268,12 @@
       <!--footer-->
 
       <!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted">
+<footer class="text-center text-lg-start  text-muted" style="background-color:#4ABDAC; ">
     <!-- Section: Social media -->
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <!-- Left -->
       <div class="me-5 d-none d-lg-block">
-        <span>ESTIMULANDO O BEM ESTAR EM TERÇEIRA IDADE</span>
+        <span style="color: white;">ESTIMULANDO O BEM ESTAR EM TERÇEIRA IDADE</span>
         <ion-icon name="qr-code-outline"></ion-icon>
       </div>
       <!-- Left -->
@@ -282,10 +282,10 @@
       <div>
        
           <ion-icon></ion-icon></a>
-          <a href=""><ion-icon name="logo-instagram"></ion-icon></a>
-          <a href=""><ion-icon name="logo-google"></ion-icon></a>
-          <a href=""><ion-icon name="logo-youtube"></ion-icon></a>
-          <a href="area.php"><ion-icon name="enter-outline"></ion-icon></a>
+          <a href=""><ion-icon name="logo-instagram" style="color: white;"></ion-icon></a>
+          <a href=""><ion-icon name="logo-google" style="color: white;"></ion-icon></a>
+          <a href=""><ion-icon name="logo-youtube" style="color: white;"></ion-icon></a>
+          <a href="area.php"><ion-icon name="enter-outline" style="color: white;"></ion-icon></a>
       
    </div>
       <!-- Right -->
@@ -300,7 +300,7 @@
           <!-- Grid column -->
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <!-- Content -->
-            <h6 class="text-uppercase fw-bold mb-4">
+            <h6 style="color: white;" class="text-uppercase fw-bold mb-4">
               <i class="fas fa-gem me-3"></i>Lar de Caridade
             </h6>
             <img src="img/2022-09-01_11h05_15.pngeeeeeee.png "id="ccc" alt="">
@@ -310,20 +310,20 @@
           <!-- Grid column -->
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">
+            <h6 style="color: white;" class="text-uppercase fw-bold mb-4">
               Produtos de Doação
             </h6>
-            <p>
-              <a href="#!" class="text-reset">Alimentos</a>
+            <p style="color: white;">
+              <a  style="color: white; text-decoration:none;" href="#!" class="text-reset">Alimentos</a>
             </p>
-            <p>
-              <a href="#!" class="text-reset">Roupas</a>
+            <p style="color: white;">
+              <a  style="color: white; text-decoration:none;" href="#!" class="text-reset">Roupas</a>
             </p>
-            <p>
-              <a href="#!" class="text-reset">Material Escolar</a>
+            <p style="color: white;">
+              <a  style="color: white; text-decoration:none;"  href="#!" class="text-reset">Material Escolar</a>
             </p>
-            <p>
-              <a href="#!" class="text-reset">Extras</a>
+            <p style="color: white;">
+              <a  style="color: white; text-decoration:none;" href="#!" class="text-reset">Extras</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -331,21 +331,21 @@
           <!-- Grid column -->
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">
+            <h6 style="color: white;" class="text-uppercase fw-bold mb-4">
               Estamos Localizados
               <ion-icon name="pin-outline"></ion-icon>
             </h6>
-            <p>
-              <a href="#!" class="text-reset">Luanda</a>
+            <p style="color: white; text-decoration:none;">
+              <a style="color: white; text-decoration:none;" href="#!" class="text-reset">Luanda</a>
             </p>
-            <p>
-              <a href="#!" class="text-reset">Benguela</a>
+            <p style="color: white; text-decoration:none;">
+              <a style="color: white; text-decoration:none;" href="#!" class="text-reset">Benguela</a>
             </p>
-            <p>
-              <a href="#!" class="text-reset">Malanje</a>
+            <p style="color: white; text-decoration:none;">
+              <a style="color: white; text-decoration:none;" href="#!" class="text-reset">Malanje</a>
             </p>
-            <p>
-              <a href="#!" class="text-reset">Cabinda</a>
+            <p style="color: white; text-decoration:none;">
+              <a style="color: white; text-decoration:none;" href="#!" class="text-reset">Cabinda</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -353,14 +353,14 @@
           <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">Contacto</h6>
-            <p><i class="fas fa-home me-3"></i> Luanda, LD 10012, AO</p>
-            <p>
+            <h6 style="color: white; text-decoration:none;" class="text-uppercase fw-bold mb-4">Contacto</h6>
+            <p style="color: white; text-decoration:none;"><i class="fas fa-home me-3"></i> Luanda, LD 10012, AO</p>
+            <p style="color: white; text-decoration:none;">
               <i class="fas fa-envelope me-3"></i>
               Lcaridade@gmail.com
             </p>
-            <p><i class="fas fa-phone me-3"></i> + 244 567 886 46</p>
-            <p><i class="fas fa-print me-3"></i> + 244 234 567 89</p>
+            <p style="color: white; text-decoration:none;"><i class="fas fa-phone me-3"></i> + 244 567 886 46</p>
+            <p style="color: white; text-decoration:none;"><i class="fas fa-print me-3"></i> + 244 234 567 89</p>
           </div>
           <!-- Grid column -->
         </div>
@@ -370,10 +370,10 @@
     <!-- Section: Links  -->
   
     <!-- Copyright -->
-    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+    <div class="text-center p-4" style="background: #FC4A1A; color: white;">
       © 2021 Copyright:
-      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">LarCaridade.com</a>
-      <ion-icon name="qr-code-outline"></ion-icon>
+      <a class="text-reset fw-bold" href="https://mdbootstrap.com/" style="text-decoration:none;">LarCaridade.com</a>
+      <ion-icon name="qr-code-outline" style="color"></ion-icon>
     </div>
     <!-- Copyright -->
   </footer>
