foi alterado o lar

--- a/portal.html
+++ b/portal.html
@@ -80,7 +80,7 @@
 
 <!--corpo do projecto-->
     
-<div class="top-bar clesio"><h1>PORTAL DE TRANSPARÊNCIA</h1></div>
+<div class="top-bar" style="color:white;"><h1>PORTAL DE TRANSPARÊNCIA</h1></div>
 
 <div class="container">
   <div class="div">
