--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="vai.css">
   <link rel="stylesheet" href="bulma.min.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <!-- CSS only -->
@@ -114,18 +115,9 @@
       </div>
 
 <!--corpo do projecto-->
-    <main>
-      <section class="titulo">
-        <h1 class="titulo_item">BEM VINDO AO </h1><br>
-        <h1 class="titulo_item">LAR DA CARIDADE</h1>
-        <P>conheça nossa estrutura, ambiente e o trabalho desenvolvido em favor dos idosos acolhidos</P>
-      </section>
-    </main>
-    <div class="vai">
-      <a class="color_orange" href="quem.html">Entrar</a>
-    </div>
 
-<div class="top-bar clesio" >
+
+<div class="top-bar " >
 <h2>LAR DE CARIDADE </h2>
 </div>
 
@@ -156,38 +148,96 @@
 
 <!--card-->
 
-<div class="sombra">
-  <div class="card" style="width: 18rem;">
-    <img src="img/colaboracao-instituicao-longa-permanencia-idosos.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">DOE</h5>
-      <p class="card-text">Colaboração para manutenção geral da Instituição, inclusive investimentos.</p>
-      <a href="contato.html" class="btn btn-dark">saiba mais</a>
+
+<div class="about-us section-padding" data-scroll-index='1'>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 section-title text-center">
+        <h3>BEM VINDO AO </h3>
+        <h3>LAR DE CARIDADE</h3>
+        <p>conheça nossa estrutura, ambiente e o trabalho desenvolvido em favor dos idosos acolhidos</p>
+        <span class="section-title-line"></span> </div>
+      <div class="col-md-6 mb-50">
+        <div class="section-info">
+          <div class="sub-title-paragraph">
+            <h4>You can conquer the world.</h4>
+            <h5> O Lar da Caridade de Vinhedo é uma Instituição de Longa Permanência para Idosos. Associação de direito privado, sem fins lucrativos/econômicos, filantrópica, sem distribuição de resultados sob qualquer forma. Fundada em 26.06.1969 com início de atividade em 26.06.1972 .</h5>
+            CRITÉRIOS DE ATENDIMENTO</h2>
+
+            <p>Acolhimento do idoso, através do CREAS,  na modalidade de Instituição  de longa permanência ( ILPI), com assistência integral ( 24 horas). Idade mínima 60 anos , não portador de moléstias infecto-contagiosa , priorizando os mais vulneráveis e sem família ou que não tenha condições para manter-se sozinho ; sem distinção de raça , nacionalidade , classe social , credo político ou religioso .</p>
+          </div>
+          <a href="quem.html" class="anchor-btn">entrar<i class="fas fa-arrow-right pd-lt-10"></i></a> </div>
+      </div>
+      <div class="col-md-6 mb-50">
+        <div class="section-img"> <img style="height: 24em;" src="imgem/Rosa.png" alt="" class="img-responsive"/> </div>
+      </div>
     </div>
-  </div>
-  <div class="card" style="width: 18rem;">
-    <img src="img/necessidades-instituicao-idosos.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">NECESSIDADES</h5>
-      <p class="card-text">-Óleo</p>
-      <p class="card-text">-Açúcar</p>
-      <p class="card-text">- Farinha de Trigo</p>
-      <p class="card-text">-Leite</p>
-      <p class="card-text">-Sardinha em Lata</p>
-      <p class="card-text">-Ovos</p>
-      <p class="card-text">-Feijão</p>
-      <a href="contato.html" class="btn btn-dark">saiba mais</a>
-    </div>
-  </div>
-  <div class="card" style="width: 18rem;">
-  <img src="img/seja-associado-contribuinte-lar-idosos.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">ASSOCIADO CONTRIBUINTE</h5>
-    <p class="card-text">Entre em contato conosco, 19- 38761361 ou pelo e-mail</p>
-    <p class="card-text">lardacaridade.vinhedo@gmail.com.</p>
-    <a href="mailto:cs0571275@gmail.com" class="btn btn-dark">enviar email</a>
   </div>
 </div>
+
+<div class="services section-padding bg-grey" data-scroll-index='2'>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 section-title text-center">
+        <h3>Conheça as nossas casa</h3>
+        <p>Vestibulum elementum dui tempus dolor gravida, vel mattis erat fermentum.</p>
+        <span class="section-title-line"></span> </div>
+      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
+        <div class="service-box bg-white text-center">
+          <div class="icon"><img src="img/colaboracao-instituicao-longa-permanencia-idosos.jpg" alt=""></div>
+          <div class="icon-text">
+            <h4 class="title-box">Chart Line</h4>
+            <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
+        <div class="service-box bg-white text-center">
+          <div class="icon"> <i class="fas fa-bullhorn "></i> </div>
+          <div class="icon-text">
+            <h4 class="title-box">Quick Anouncement</h4>
+            <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
+        <div class="service-box bg-white text-center">
+          <div class="icon"> <i class="fas fa-map-marked"></i> </div>
+          <div class="icon-text">
+            <h4 class="title-box">Mark Location</h4>
+            <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
+        <div class="service-box bg-white text-center">
+          <div class="icon"> <i class="fas fa-bug"></i> </div>
+          <div class="icon-text">
+            <h4 class="title-box">Bug Solution</h4>
+            <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
+        <div class="service-box bg-white text-center">
+          <div class="icon"> <i class="fas fa-comments"></i> </div>
+          <div class="icon-text">
+            <h4 class="title-box">Fast Communication</h4>
+            <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
+        <div class="service-box bg-white text-center">
+          <div class="icon"> <i class="fas fa-paint-brush"></i> </div>
+          <div class="icon-text">
+            <h4 class="title-box">Clean Design</h4>
+            <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 
@@ -200,58 +250,78 @@
 
 
 <!--falta-->
-<section class="section">
+<div class="contact section-padding" data-scroll-index='4'>
   <div class="container">
-    <div class="columns is-centered">
-      <div class="column is-half">
-        <h1 class="title has-text-centered">Fale com um colaborador </h1>
-
-        <form action="enviar.php" method="POST">
-          <div class="field">
-            <label class="label">Nome</label>
-            <div class="control">
-              <input name="nome" class="input" type="text" placeholder="Seu nome">
+    <div class="row">
+      <div class="col-md-12 section-title text-center">
+        <h3>Contact Us For More</h3>
+        <p>Vestibulum elementum dui tempus dolor gravida, vel mattis erat fermentum.</p>
+        <span class="section-title-line"></span> </div>
+      <div class="col-lg-5 col-md-4">
+        <div class="part-info">
+          <div class="info-box">
+            <div class="icon"> <i class="fas fa-phone"></i> </div>
+            <div class="content">
+              <h4>Phone :</h4>
+              <p>0123456789</p>
             </div>
           </div>
-
-          <div class="field">
-            <label class="label">Email *</label>
-            <div class="control">
-              <input name="email" class="input" type="email" placeholder="Seu email">
+          <div class="info-box">
+            <div class="icon"> <i class="fas fa-map-marker-alt"></i> </div>
+            <div class="content">
+              <h4>Address :</h4>
+              <p>New Delhi, India</p>
             </div>
           </div>
-
-          <div class="field">
-            <label class="label">Assunto</label>
-            <div class="control">
-              <div class="select is-fullwidth">
-                <select name="assunto">
-                  <option>Reportar erro</option>
-                  <option>Anúncios</option>
-                  <option>Outro</option>
-                </select>
+          <div class="info-box">
+            <div class="icon"> <i class="fas fa-envelope"></i> </div>
+            <div class="content">
+              <h4>Mail :</h4>
+              <p><a href="#">info@123.com</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-7 col-md-8">
+        <div class="contact-form">
+          <form class='form' id='contact-form' method='post' data-toggle='validator'>
+            <input type='hidden' name='form-name' value='contact-form' />
+            <div class="messages"></div>
+            <div class="controls">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="form-group">
+                    <input id="form_name" type="text" name="name" placeholder="Name *" required data-error="name is required.">
+                    <div class="help-block with-errors"></div>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="form-group">
+                    <input id="form_email" type="email" name="email" placeholder="Email *" required data-error="Valid email is required.">
+                    <div class="help-block with-errors"></div>
+                  </div>
+                </div>
+                <div class="col-lg-12">
+                  <div class="form-group">
+                    <input id="form_subject" type="text" name="subject" placeholder="Subject">
+                  </div>
+                </div>
+                <div class="col-lg-12 form-group">
+                  <textarea id="form_message" name="message" class="form-control" placeholder=" Type Your Message " rows="4" required data-error="Please,leave us a message."></textarea>
+                  <div class="help-block with-errors"></div>
+                </div>
+                <div class="col-lg-12 text-center">
+                  <button class="bttn">Send Message</button>
+                </div>
               </div>
             </div>
-          </div>
-
-          <div class="field">
-            <label class="label">Mensagem *</label>
-            <div class="control">
-              <textarea name="mensagem" class="textarea" placeholder="Deixe sua mensagem" maxlength="2000"></textarea>
-            </div>
-          </div>
-
-          <div class="field is-grouped">
-            <div class="control">
-              <button class="button is-link is-medium " >Enviar</button>
-            </div>
-          </div>
-        </form>
-
+          </form>
+        </div>
       </div>
     </div>
   </div>
-</section>
+</div>
+<!-- End Contact -->
 
 
 
