--- a/horario.html
+++ b/horario.html
@@ -72,11 +72,9 @@
         </div>
       </nav>
 
-
-    
-      <div class="hora">
-        
-           <h1>HORÁRIO</h1>
+    </style>
+      <div class="top-bar">
+           <h1 class="foi">HORÁRIO</h1>
       </div>
       <hr>
 
