--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <span class="section-title-line"></span> </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box bg-white text-center">
-          <div class="icon"><img src="img/colaboracao-instituicao-longa-permanencia-idosos.jpg" alt=""></div>
+          <div class="icon"  id="icon2"><img src="img/colaboracao-instituicao-longa-permanencia-idosos.jpg" alt=""></div>
           <div class="icon-text">
             <h4 class="title-box">Chart Line</h4>
             <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
@@ -193,7 +193,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box bg-white text-center">
-          <div class="icon"> <i class="fas fa-bullhorn "></i> </div>
+          <div class="icon" id="icon2"> <img src="img/necessidades-instituicao-idosos.jpg" alt=""></div>
           <div class="icon-text">
             <h4 class="title-box">Quick Anouncement</h4>
             <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
@@ -202,7 +202,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box bg-white text-center">
-          <div class="icon"> <i class="fas fa-map-marked"></i> </div>
+          <div class="icon"  id="icon2"> <img src="imgem/Rosa.png" alt=""></div>
           <div class="icon-text">
             <h4 class="title-box">Mark Location</h4>
             <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
@@ -211,7 +211,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box bg-white text-center">
-          <div class="icon"> <i class="fas fa-bug"></i> </div>
+          <div class="icon"  id="icon2"> <img src="imgem/pexels-matthias-zomer-339620.jpg" alt=""></div>
           <div class="icon-text">
             <h4 class="title-box">Bug Solution</h4>
             <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
@@ -220,7 +220,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box bg-white text-center">
-          <div class="icon"> <i class="fas fa-comments"></i> </div>
+          <div class="icon"  id="icon2"> <img src="imgem/bem-me-care-casa-de-repouso-sp-foto7.jpg" alt=""></div>
           <div class="icon-text">
             <h4 class="title-box">Fast Communication</h4>
             <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
@@ -229,7 +229,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box bg-white text-center">
-          <div class="icon"> <i class="fas fa-paint-brush"></i> </div>
+          <div class="icon"  id="icon2"> <img src="img/seja-associado-contribuinte-lar-idosos.jpg" alt=""> </div>
           <div class="icon-text">
             <h4 class="title-box">Clean Design</h4>
             <p>Sed malesuada, est eget condimentum iaculis, nisi ex facilisis metus.</p>
@@ -443,7 +443,7 @@
     <div class="text-center p-4" style="background: #FC4A1A; color: white;">
       © 2021 Copyright:
       <a class="text-reset fw-bold" href="https://mdbootstrap.com/" style="text-decoration:none;">LarCaridade.com</a>
-      <ion-icon name="qr-code-outline" style="color"></ion-icon>
+      <ion-icon name="qr-code-outline" ></ion-icon>
     </div>
     <!-- Copyright -->
   </footer>
