foi colocado animate.css em home.html

--- a/quem.html
+++ b/quem.html
@@ -75,7 +75,7 @@
       <!--carrosel-->
      
 <!-- *****************************        Corpo do projecto do Carlos.Rosa     ********************************* -->
-  <div class="texto-pages">
+  <div class="top-bar" style="color: white;">
       <h1>Quem Somos</h1>
   </div><!-- Texto Pages -->
   
