--- a/index.html
+++ b/index.html
@@ -62,9 +62,13 @@ align-items: center;
     <div>
      <ion-icon  class="anco" name="mail"></ion-icon>
     <a href="mailto:lardacaridade.vinhedo@gmail.com">lardacaridade.idosodo@gmail.com</a>
+    
     </div>
     <div></div>
-    <div></div>
+    <div class="item">
+      <i class="fas fa-phone" ></i>
+       (244) 940300400
+    </div>
     <div>
     
     </div>
