--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ align-items: center;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .anco{
@@ -51,6 +52,15 @@ align-items: center;
   color: black;
 }
 
+
+@media screen and (max-width: 678px) {
+    .containerss{
+      display: flex;
+   text-align: center;
+
+    }
+ 
+}
 
 
   </style>
@@ -65,9 +75,7 @@ align-items: center;
     
     </div>
     <div></div>
-    <div class="item">
-      <i class="fas fa-phone" ></i>
-       (244) 940300400
+    <div>
     </div>
     <div>
     
