--- a/portal.html
+++ b/portal.html
@@ -15,20 +15,12 @@
 <style>
   
 
-  .navbar-expand-lg {
-    background-color: rgb(255, 255, 255);
-  }
-  
-  .button.is-medium {
-    font-size: 1.25rem;
-    width: 100%;
-    color: white;
-  }
+
   </style>
 <body>
   <div class="top-bar" id="clesio34">
     <ul>
-        <li><a href=""><ion-icon name="logo-facebook"></ion-icon></a></li>
+        <li><a href=""><ion-icon name="logo-facebook"></ion-icon> </a></li>
         <li><a href="https://www.google.com/search?q=twi&rlz=1C1GCEU_pt-BRAO965AO965&oq=twi&aqs=chrome..69i57j46i131i199i433i465i512j0i131i433i512j0i433i512j0i512l2j69i61l2.2672j0j7&sourceid=chrome&ie=UTF-8"><ion-icon name="logo-twitter"></ion-icon></a></li>
         <li><a href=""><ion-icon name="logo-instagram"></ion-icon></a></li>
         <li><a href=""><ion-icon name="logo-google"></ion-icon></a></li>
@@ -60,9 +52,7 @@
               <li class="nav-item">
                 <a class="nav-link active" id="texte" href="missa.html">MISSÃO</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active" id="texte" href="horario.html" tabindex="-1" aria-disabled="true">HORÁRIO</a>
-              </li>
+              
               <li class="nav-item">
                 <a class="nav-link active" id="texte" href="portal.html" tabindex="-1" aria-disabled="true">PORTAL DE TRANSPARÊNCIA</a>
               </li>
@@ -78,10 +68,21 @@
 
      </div>
 
+     <style>
+      .rose{
+        display: flex;
+        justify-content: center;
+        padding: 10px;
+      }
+     </style>
+
 <!--corpo do projecto-->
 <!-- feggggggggggggggggggggggggggggggggggggggggggfdddddddddddfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff -->
     
-<div class="top-bar" style="color:white;"><h1>PORTAL DE TRANSPARÊNCIA</h1></div>
+<div class="rose">
+  <h1>PORTAL DE TRANSPARÊNCIA</h1>
+</div>
+
 
 <div class="container">
   <div class="div">
@@ -96,11 +97,11 @@
 </div>
 
 <div class="container clesio123"> 
-    <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt=""></a> 
-    <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt=""></a> 
-    <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt=""></a> 
-    <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt=""></a> 
-    <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt=""></a> 
+    <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+    <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Regimento</a> 
+    <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Certificação</a> 
+    <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Ata da actual Diretora</a> 
+    <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Plano de trabalho</a> 
 </div>
 
 <!-- smkmmkmksmkmkmkmkmddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddssssssssssssssssssssssssssssssssssss -->
