--- a/missa.html
+++ b/missa.html
@@ -17,7 +17,9 @@
   <style>
    .navbar-expand-lg {
       background-color: rgb(255, 255, 255);
-    }
+
+        height: 8em;
+          }
     
     .button.is-medium {
       font-size: 1.25rem;
