--- a/quem.html
+++ b/quem.html
@@ -308,6 +308,11 @@ body {
 #myBtn:hover {
   background-color: rgb(241, 28, 28);
 }
+
+.navbar-expand-lg{
+  height: 8em;
+}
+
 </style>
 </head>
 <body> 
