--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@1,700&family=Open+Sans:ital,wght@0,500;0,600;1,500&family=Yellowtail&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@1,700&family=Bento:ital,wght@0,500;0,600;1,500&family=Yellowtail&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Vanue:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
 </head>
 <style>
  
@@ -156,36 +159,44 @@
 <div class="about-us section-padding" data-scroll-index='1'>
   <div class="container">
     <div class="row">
-      <div class="col-md-12 section-title text-center">
+      <div class="col-md-12 section-title text-center " id="galeria">
         <h3>SEJA BEM VINDO</h3>
         <h3>LAR DE CARIDADE</h3>
         <p>conheça nossa estrutura, ambiente e o trabalho desenvolvido em favor dos idosos acolhidos</p>
         <span class="section-title-line"></span> </div>
-      <div class="col-md-6 mb-50">
+      <div class="col-md-6 mb-50" id="galeria">
         <div class="section-info">
-          <div class="sub-title-paragraph">
+          <div class="sub-title-paragraph" id="larCaridade">
             <h4>You can conquer the world.</h4>
             <h5> O Lar da Caridade de Vinhedo é uma Instituição de Longa Permanência para Idosos. Associação de direito privado, sem fins lucrativos</h5>
-            CRITÉRIOS DE ATENDIMENTO</h2>
+           <h2>CRITÉRIOS DE ATENDIMENTO</h2>
 
             <p>Acolhimento do idoso, através do CREAS,  na modalidade de Instituição  de longa permanência ( ILPI), com assistência integral ( 24 horas). Idade mínima 60 anos , não portador de moléstias infecto-contagiosa , priorizando os mais vulneráveis e sem família ou que não tenha condições para manter-se sozinho ; sem distinção de raça , nacionalidade , classe social , credo político ou religioso .</p>
           </div>
           <a href="quem.html" class="anchor-btn">Entrar<i class="fas fa-arrow-right pd-lt-10"></i></a> </div>
       </div>
-      <div class="col-md-6 mb-50">
-        <div class="section-img"> <img style="height: 24em;" src="imgem/Rosa.png" alt="" class="img-responsive"/> </div>
+      <div class="col-md-6 mb-50" id="imagevelho">
+        <div class="section-img"> <img style="height: 24em;" src="imgem/" alt="" class="img-responsive"/> </div>
       </div>
     </div>
   </div>
 </div>
 
 
+<div class="container mt-3">
+  <h2>Taxa de Doação</h2>
+  <p></p> 
+  <div class="progress">
+    <div class="progress-bar bg-success"  style="width:40%">Taxa de Doações 40%.</div>
+  </div>
+  <div class="spinner-border text-sucess"></div>
+</div>
 
 
 
 
 
-<div class="services section-padding bg-grey" data-scroll-index='2'>
+<div class="services mt-0 bg-grey" data-scroll-index='2'>
   <div class="container">
     <div class="row">
       <div class="col-md-12 section-title text-center">
