--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ document.getElementById("defaultOpen").click();
               <a  style="color: white; text-decoration:none;"  href="#!" class="text-reset">Material Escolar</a>
             </p>
             <p style="color: white;">
-              <a  style="color: white; text-decoration:none;" href="#!" class="text-reset">Extras</a>
+              <a  style="color: white; text-decoration:none;" href="#!" class="text-reset">Extra</a>
             </p>
           </div>
           <!-- Grid column -->
