--- a/portal.html
+++ b/portal.html
@@ -12,7 +12,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 </head>
-wefwrsdrvsdvrsvervr
+
 
 <style>
   
@@ -20,16 +20,26 @@ wefwrsdrvsdvrsvervr
 
   </style>
 <body>
-  <div class="top-bar" id="clesio34">
-    <ul>
-        <li><a href=""><ion-icon name="logo-facebook"></ion-icon> </a></li>
-        <li><a href="https://www.google.com/search?q=twi&rlz=1C1GCEU_pt-BRAO965AO965&oq=twi&aqs=chrome..69i57j46i131i199i433i465i512j0i131i433i512j0i433i512j0i512l2j69i61l2.2672j0j7&sourceid=chrome&ie=UTF-8"><ion-icon name="logo-twitter"></ion-icon></a></li>
-        <li><a href=""><ion-icon name="logo-instagram"></ion-icon></a></li>
-        <li><a href=""><ion-icon name="logo-google"></ion-icon></a></li>
-        <li><a href=""><ion-icon name="logo-youtube"></ion-icon></a></li>
-        <li><a href="login.php"><ion-icon name="enter-outline"></ion-icon></a></li>
-    </ul>
-</div>
+ 
+  <div class="containerss top-bar" >
+    <div>
+     <ion-icon  class="anco" name="mail"></ion-icon>
+    <a href="mailto:lardacaridade.vinhedo@gmail.com">lardacaridade.idosodo@gmail.com</a>
+  </div>
+  <div></div>
+  <div></div>
+    <div>
+    </div>
+    <div>
+      <ion-icon class="anco" name="logo-instagram"></ion-icon>
+      <ion-icon class="anco" name="logo-facebook"></ion-icon>
+      <ion-icon class="anco" name="logo-google"></ion-icon>
+      <ion-icon class="anco" name="logo-youtube"></ion-icon>
+      <ion-icon class="anco" name="logo-instagram"></ion-icon>
+      <a href="login.php"><ion-icon  class="anco" name="enter-outline"></ion-icon></a> 
+    </div>
+  </div>
+
 
 
 
